# sigma_attack

./: README.md  id_ed25519_github.pub  id_ed25519_github.pub.pub  pyproject.toml
src/: bert_sequence_classifier.py  load_parsed_fields.py  parse_files.py  tf_idf_single_level.py
tests/test_data/: schema.json
tests/test_src/: test_parse_files.py
